--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@dnd-kit/utilities": "^3.2.2",
     "next": "15.4.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
